k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helpernote
  labels:
    name: helpernote
    app: helpernote
